--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(Interpreter)
 add_subdirectory(Logger)
 add_subdirectory(Filters)
 add_subdirectory(QtTest)
+add_subdirectory(Netif)
