--- a/tests/QtTest/CMakeLists.txt
+++ b/tests/QtTest/CMakeLists.txt
@@ -18,3 +18,8 @@ target_link_libraries(test_can edm Qt5::Core Qt5::SerialBus)
 add_executable(test_io test_io.cpp)
 add_dependencies(test_io edm)
 target_link_libraries(test_io edm Qt5::Core Qt5::SerialBus)
+
+
+add_executable(test_power test_power.cpp)
+add_dependencies(test_power edm)
+target_link_libraries(test_power edm Qt5::Core Qt5::SerialBus)
