--- a/tests/QtTest/CMakeLists.txt
+++ b/tests/QtTest/CMakeLists.txt
@@ -23,3 +23,7 @@ target_link_libraries(test_io edm Qt5::Core Qt5::SerialBus)
 add_executable(test_power test_power.cpp)
 add_dependencies(test_power edm)
 target_link_libraries(test_power edm Qt5::Core Qt5::SerialBus)
+
+add_executable(testpowerwidget testpowerwidget.cpp)
+add_dependencies(testpowerwidget edm)
+target_link_libraries(testpowerwidget edm Qt5::Core Qt5::SerialBus Qt5::Widgets)
