temp save: 修改一下CanThread的机制

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ set(PROJECT_SOURCES
     Src/Motion/MoveruntimeWrapper/MoveruntimeWrapper.cpp
     Src/Motion/MotionThread/MotionCommandQueue.cpp 
     Src/Motion/MotionThread/MotionThreadController.cpp
+    Src/GlobalCommandQueue/GlobalCommandQueue.cpp
 )
 
 include_directories(${PROJECT_SOURCE_DIR}/Src)
