--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(Filters)
 add_subdirectory(QtTest)
 add_subdirectory(Netif)
 add_subdirectory(Ecat)
+add_subdirectory(GlobalCommandQueue)
