test ecat connect, disconnect

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(QtTest)
 add_subdirectory(Netif)
 add_subdirectory(Ecat)
 add_subdirectory(GlobalCommandQueue)
+add_subdirectory(Motion)
