temp save: todo trajectorylist implement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,11 +71,15 @@ set(PROJECT_SOURCES
     Src/Motion/MotionSignalQueue/MotionSignalQueue.cpp
     Src/Motion/MotionStateMachine/MotionStateMachine.cpp
     Src/Motion/MotionStateMachine/MotionAutoTask.cpp
+    Src/Motion/MotionStateMachine/G00AutoTask.cpp
+    Src/Motion/MotionStateMachine/G01AutoTask.cpp
     Src/Motion/MotionStateMachine/MotionAutoTaskRunner.cpp
     Src/Motion/PauseMoveController/AxisRecorder.cpp
     Src/Motion/PauseMoveController/PauseMoveController.cpp
     Src/Motion/SignalBuffer/SignalBuffer.cpp
     Src/Motion/TouchDetectHandler/TouchDetectHandler.cpp
+    Src/Motion/Trajectory/TrajectorySegement.cpp
+    Src/Motion/Trajectory/TrajectoryList.cpp
     Src/GlobalCommandQueue/GlobalCommandQueue.cpp
     Src/QtDependComponents/TaskManager/TaskManager.cpp 
     Src/QtDependComponents/TaskManager/GCodeManager.cpp
