--- a/tests/Motion/CMakeLists.txt
+++ b/tests/Motion/CMakeLists.txt
@@ -11,6 +11,10 @@ add_dependencies(test_pm edm)
 target_link_libraries(test_pm edm Qt5::Core Qt5::SerialBus)
 
 
+add_executable(test_trajectory test_trajectory.cpp)
+add_dependencies(test_trajectory edm)
+target_link_libraries(test_trajectory edm)
+
 add_executable(testmotiongui testmotiongui.cpp)
 add_dependencies(testmotiongui edm)
 target_link_libraries(testmotiongui edm Qt5::Core Qt5::SerialBus Qt5::Widgets)
