CoordinateManager Init from file

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(Netif)
 add_subdirectory(Ecat)
 add_subdirectory(GlobalCommandQueue)
 add_subdirectory(Motion)
+add_subdirectory(Coord)
