--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(Ecat)
 add_subdirectory(GlobalCommandQueue)
 add_subdirectory(Motion)
 add_subdirectory(Coord)
+add_subdirectory(json)
