offline/online cb for mt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,6 @@ add_subdirectory(QtTest)
 add_subdirectory(Netif)
 add_subdirectory(Ecat)
 add_subdirectory(GlobalCommandQueue)
-add_subdirectory(Motion)
+# add_subdirectory(Motion)
 add_subdirectory(Coord)
 add_subdirectory(json)
