temp save 20240315 17:39, TODO: task manager 逻辑

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -16,6 +16,8 @@ set(APP_SOURCES
     MovePanel/MovePanel.cpp
     IOPanel/IOPanel.cpp
     PowerPanel/PowerPanel.cpp
+    TaskManager/TaskManager.cpp  
+    TaskManager/GCodeTaskConverter.cpp
     Resource/app_resource.qrc # qt resource
 )
 
