feat: task manager/codeeditor/qss

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -18,6 +18,8 @@ set(APP_SOURCES
     PowerPanel/PowerPanel.cpp
     TaskManager/TaskManager.cpp  
     TaskManager/GCodeTaskConverter.cpp
+    codeeditor/codeeditor.cpp
+    codeeditor/highlighter.cpp
     Resource/app_resource.qrc # qt resource
 )
 
