temp: gcode panel TODO file test

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -19,6 +19,7 @@ set(APP_SOURCES
     TaskManager/TaskManager.cpp  
     TaskManager/GCodeTaskConverter.cpp
     TaskManager/GCodeRunner.cpp
+    GCodePanel/GCodePanel.cpp
     codeeditor/codeeditor.cpp
     codeeditor/highlighter.cpp
     Resource/app_resource.qrc # qt resource
