--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,8 +3,8 @@ add_subdirectory(Logger)
 add_subdirectory(Filters)
 add_subdirectory(QtTest)
 add_subdirectory(Netif)
-add_subdirectory(Ecat)
-add_subdirectory(GlobalCommandQueue)
+# add_subdirectory(Ecat)
+# add_subdirectory(GlobalCommandQueue)
 # add_subdirectory(Motion)
 add_subdirectory(Coord)
-add_subdirectory(json)
+# add_subdirectory(json)
