perf: 重构了获取can伺服的方法, 更简单一些

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ set(PROJECT_SOURCES
     Src/Motion/TouchDetectHandler/TouchDetectHandler.cpp
     Src/Motion/Trajectory/TrajectorySegement.cpp
     Src/Motion/Trajectory/TrajectoryList.cpp
+    Src/Motion/MotionSharedData/MotionSharedData.cpp
     Src/GlobalCommandQueue/GlobalCommandQueue.cpp
     Src/QtDependComponents/InfoDispatcher/InfoDispatcher.cpp
     Src/Coordinate/Coordinate.cpp
