feat: fix online axis bug; zynq controller TODO more

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -44,7 +44,7 @@ add_executable(app ${APP_SOURCES})
 add_dependencies(app edm)
 target_include_directories(app PUBLIC ${QWT_INCLUDE_DIR})
 target_link_directories(app PUBLIC ${QWT_LIBRARY_DIR})
-target_link_libraries(app PUBLIC edm Qt5::Core Qt5::Widgets Qt5::SerialBus Qt5::Sql ${QWT_LIBRARIES})
+target_link_libraries(app PUBLIC edm Qt5::Core Qt5::Widgets Qt5::SerialBus Qt5::Sql Qt5::Network ${QWT_LIBRARIES})
 
 # SharedCoreData 用于创建并共享核心数据(如InfoDispatcher, GlobalCommandQueue, CanController等)
 # 并用于构建不同窗体模块的信号槽桥梁 (简化信号槽的传递路径)
