feat: 标定页面集成; 数据显示器显示实际值

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -35,6 +35,7 @@ set(APP_SOURCES
     SystemSettingPanel/SystemSettingPanel.cpp
     DataQueueRecordPanel/DataQueueRecordPanel.cpp
     LogListPanel/LogListPanel.cpp
+    ADCCalcPanel/ADCCalcPanel.cpp
     Resource/app_resource.qrc # qt resource
 )
 
