feat: 便捷坐标系设定

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -32,6 +32,7 @@ set(APP_SOURCES
     codeeditor/highlighter.cpp
     DataDisplayer/DataDisplayer.cpp
     CoordSettingPanel/CoordSettingPanel.cpp
+    CoordSettingPanel/CoordSetToGivenValueDialog.cpp
     SystemSettingPanel/SystemSettingPanel.cpp
     DataQueueRecordPanel/DataQueueRecordPanel.cpp
     LogListPanel/LogListPanel.cpp
