feat: 打孔动作完成(TODO 穿透算法的移植)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ set(PROJECT_SOURCES
     Src/Motion/MotionStateMachine/MotionAutoTask.cpp
     Src/Motion/MotionStateMachine/G00AutoTask.cpp
     Src/Motion/MotionStateMachine/G01AutoTask.cpp
+    Src/Motion/MotionStateMachine/DrillAutoTask.cpp
     Src/Motion/MotionStateMachine/MotionAutoTaskRunner.cpp
     Src/Motion/PauseMoveController/AxisRecorder.cpp
     Src/Motion/PauseMoveController/PauseMoveController.cpp
