feat: 移植了算法, 系统设定, TODO: 使用算法, 展示数据, 记录数据

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ set(PROJECT_SOURCES
     Src/Utils/Netif/netif_utils.cpp
     Src/Utils/UnitConverter/UnitConverter.cpp
     Src/Utils/DataQueueRecorder/DataQueueRecorder.cpp
+    Src/Utils/Breakout/BreakoutFilter.cpp
     Src/Utils/Crc/crc.cpp
     Src/Motion/Moveruntime/Moveruntime.cpp
     Src/Motion/MoveruntimeWrapper/MoveruntimeWrapper.cpp
