--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ set(Qt5_DIR $ENV{HOME}/Qt5.14.2/5.14.2/gcc_64/lib/cmake/Qt5)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
-find_package(Qt5 COMPONENTS Core SerialBus Widgets Network REQUIRED)
+find_package(Qt5 COMPONENTS Core SerialBus Widgets Network Multimedia REQUIRED)
 
 ## Project
 set(PROJECT_SOURCES
@@ -109,6 +109,8 @@ set(PROJECT_SOURCES
     Src/HandboxConverter/HandboxConverter.cpp
     Src/QtDependComponents/ZynqConnection/ZynqConnectController.cpp
     Src/QtDependComponents/ZynqConnection/ZynqUdpMessageHolder.cpp
+    Src/QtDependComponents/AudioRecorder/AudioRecorder.cpp
+    Src/QtDependComponents/AudioRecorder/AudioRecordWorker.cpp
 )
 
 # include_directories(${PROJECT_SOURCE_DIR}/Src)
@@ -124,7 +126,7 @@ target_link_libraries(edm PUBLIC
     Boost::python 
     Boost::boost
     Python3::Python
-    Qt5::Core Qt5::SerialBus Qt5::Network
+    Qt5::Core Qt5::SerialBus Qt5::Network Qt5::Multimedia
     m # <math.h> or <cmath>
     pthread # <pthread.h>
     atomic
