--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -3,7 +3,7 @@ set(Qt5_DIR $ENV{HOME}/Qt5.14.2/5.14.2/gcc_64/lib/cmake/Qt5)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
-find_package(Qt5 COMPONENTS Core SerialBus Widgets Sql REQUIRED)
+find_package(Qt5 COMPONENTS Core SerialBus Widgets Sql Multimedia REQUIRED)
 
 # qwt
 set(QWT_ROOT ${PROJECT_SOURCE_DIR}/third_party/qwt-6.2.0-x86_64)
@@ -46,7 +46,7 @@ add_executable(app ${APP_SOURCES})
 add_dependencies(app edm)
 target_include_directories(app PUBLIC ${QWT_INCLUDE_DIR})
 target_link_directories(app PUBLIC ${QWT_LIBRARY_DIR})
-target_link_libraries(app PUBLIC edm Qt5::Core Qt5::Widgets Qt5::SerialBus Qt5::Sql Qt5::Network ${QWT_LIBRARIES})
+target_link_libraries(app PUBLIC edm Qt5::Core Qt5::Widgets Qt5::SerialBus Qt5::Sql Qt5::Network Qt5::Multimedia ${QWT_LIBRARIES})
 
 # SharedCoreData 用于创建并共享核心数据(如InfoDispatcher, GlobalCommandQueue, CanController等)
 # 并用于构建不同窗体模块的信号槽桥梁 (简化信号槽的传递路径)
